2016/10/30 v131
	1. Only usable toy would be generated for auto-gen bars.

2016/10/27 v130
	1. Update for WOW 7.1

2016/10/15 v129
	1. Update for the IGAS v121

2016/10/08 v128
	1. Remove the filter code and order settings from the auto-gen popup system, add gametooltip filter for it.
	2. All auto-gen popup bar of items will used one thread to refresh, so the cost is reduced and no item would be displayed twice.

2016/10/01 v127
	1. Fix display error for raidpanel's menu.

2016/10/01 v126
	1. A new class buff panel is added to raidpanel, used to show the class's ability like Shield Block, also you can modify the list by yourself.
	2. The buff/debuff/class buff panel's settings like location, grid set and others can be modified through the menu.

2016/09/23 v125
	1. Tooltip filter is added to the container view system.

2016/09/13 v124
	1. All player's buff would be shown on the raidpanel, you can right-click to send them to black list, just like the debuffs.

2016/09/09 v123
	1. The Beacon of Faith would be shown in the raid panel.

2016/09/06 v122
	1. An alert icon would be shown if the quest item has unknown appearance.

2016/09/04 v121
	1. Use a new GameTooltip to avoid hooking slow down the item's scan.

2016/09/02 v120
	1. Bless of paladin would be shown in the raid panel.

2016/09/01 v119
	1. The Beacon of Light would be shown in raid panel.

2016/09/01 v118
	1. Hide the artifact bar, use the info bar to display the artifact power.

2016/08/30 v116
	1. The container view system would load the container with a delay for each one, so it won't lag when you open it for the first time.
	2. A default container view is added, you can't modify it, and it will loaded when you entering the game, so you can still use items when you entering the game in combat.

2016/08/29 v115
	1. Replace the icon of group roles.

2016/08/28 v114
	1. 'Use Debuff color' & 'Use Smoothing Color' is added to raid panel's menu.
	2. Fix the totembar, totem can be canceled.

2016/08/28 v113