@@ -1,3 +1,6 @@
+2016/10/30 v132
+	1. Show the upgrade icon on container buttons, (won't work until blz fix the api).
+
 2016/10/30 v131
 	1. Only usable toy would be generated for auto-gen bars.
 
